# html2pdf-api

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md  RELEASE_NOTES.md  app.env
.github/workflows/: ci.yml  publish.yml
examples/: README.md  actix_web_example.rs  axum_example.rs  rocket_example.rs
src/: config.rs  error.rs  handle.rs  lib.rs  pool.rs  prelude.rs  stats.rs  tracked.rs
src/factory/: chrome.rs  mock.rs  mod.rs
src/integrations/: actix.rs  axum.rs  mod.rs  rocket.rs
src/service/: mod.rs  pdf.rs  types.rs
src/traits/: healthcheck.rs  mod.rs
tests/: concurrent_tests.rs  integration_tests.rs
tests/common/: mock_factory.rs  mod.rs
